<resources>
    <string name="app_name">Book of recipes</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="rabbits_with_carrots">Rabbits with carrots</string>
    <string name="login_error">Login must be 4–12 characters long</string>
    <string name="password_error">Password must be 4–16 characters long</string>
    <string name="password_error_reconciliation">Wrong password re-entered</string>
    <string name="characters_check_error">Field contains invalid characters</string>
    <string name="PREFERENCE_FILE_KEY">KEY</string>
    <string name="image">image</string>
</resources>