<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-10sp"
        app:srcCompat="@drawable/rabbits_family"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="false"
        android:contentDescription="@string/rabbits_with_carrots" />

    <EditText
        android:id="@+id/login_register_activity"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView4"
        android:hint="@string/prompt_login"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:autofillHints="@string/prompt_login" />

    <EditText
        android:id="@+id/password_register_activity"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_register_activity"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/prompt_password"/>

    <EditText
        android:id="@+id/confirm_password_register_activity"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_register_activity"
        android:hint="@string/prompt_confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="false"
        android:autofillHints="@string/prompt_password"/>

    <Button
        android:id="@+id/btRegister_register_activity"
        android:layout_below="@id/confirm_password_register_activity"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_button"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_below="@id/btRegister_register_activity"
        android:layout_alignStart="@+id/btRegister_register_activity"
        android:layout_alignLeft="@+id/btRegister_register_activity"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="14dp"
        android:text="@string/have_an_account"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/server_response_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="30sp"
        android:visibility="visible"
        android:background="@drawable/orange_button"/>
</RelativeLayout>